--- a/css/main.css
+++ b/css/main.css
@@ -73,12 +73,15 @@ footer {
 
   #column-3 {
     background-color: #ba9eb6;
+    width: 100%;
   }
 
   footer {
     background-color: #e3e3e3;
   }
-  
+  .col-3 {
+    width: 50%;
+  }
 }
 
 
@@ -98,6 +101,11 @@ footer {
 
   #column-3 {
     background-color: #07e063;
+    width: 33.3%;
+  }
+
+  .col-3 {
+    width: 33.3%;
   }
 
   footer {
